A4/parser.out
Created by PLY version 3.10 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declarations funcdefs
Rule 2     declarations -> declarations declaration
Rule 3     declarations -> declarations funcproto
Rule 4     declarations -> <empty>
Rule 5     funcdefs -> function funcdefs
Rule 6     funcdefs -> function
Rule 7     funcproto -> ftypename LPAREN args RPAREN SEMICOLON
Rule 8     ftypename -> type fname
Rule 9     function -> ftypename LPAREN dargs statements RBRACE
Rule 10    dargs -> args RPAREN LBRACE
Rule 11    type -> INT
Rule 12    type -> VOID
Rule 13    type -> FLOAT
Rule 14    main -> MAIN
Rule 15    fname -> var
Rule 16    fname -> pointer
Rule 17    fname -> main
Rule 18    args -> arg argcomp
Rule 19    args -> <empty>
Rule 20    argcomp -> COMMA arg argcomp
Rule 21    argcomp -> <empty>
Rule 22    arg -> type param
Rule 23    param -> var
Rule 24    param -> pointer
Rule 25    param -> address
Rule 26    var -> ID
Rule 27    const -> NUMBER
Rule 28    const -> FLOATNUM
Rule 29    pointer -> TIMES pointer
Rule 30    pointer -> TIMES address
Rule 31    pointer -> TIMES var
Rule 32    address -> AMPERSAND var
Rule 33    voidfuncall -> funcall SEMICOLON
Rule 34    funcall -> var LPAREN params RPAREN
Rule 35    params -> callparam paramcomp
Rule 36    params -> <empty>
Rule 37    paramcomp -> COMMA callparam paramcomp
Rule 38    paramcomp -> <empty>
Rule 39    callparam -> expression
Rule 40    statements -> statement statements
Rule 41    statements -> COMMENT statements
Rule 42    statements -> declaration statements
Rule 43    statements -> voidfuncall statements
Rule 44    statements -> retstatement statements
Rule 45    statements -> <empty>
Rule 46    statement -> assignment
Rule 47    statement -> ifstatement
Rule 48    statement -> whilestatement
Rule 49    retstatement -> RETURN expression SEMICOLON
Rule 50    retstatement -> RETURN SEMICOLON
Rule 51    declaration -> type idlist SEMICOLON
Rule 52    idlist -> decl_var COMMA idlist
Rule 53    idlist -> decl_var
Rule 54    decl_var -> var
Rule 55    decl_var -> pointer
Rule 56    assignment -> pointer EQUALS expression SEMICOLON
Rule 57    assignment -> var EQUALS expression SEMICOLON
Rule 58    condition -> expression LT expression
Rule 59    condition -> expression GT expression
Rule 60    condition -> expression LE expression
Rule 61    condition -> expression GE expression
Rule 62    condition -> expression EQ expression
Rule 63    condition -> expression NE expression
Rule 64    condition -> condition AND condition
Rule 65    condition -> condition OR condition
Rule 66    condition -> NOT condition
Rule 67    condition -> LPAREN condition RPAREN
Rule 68    controlbody -> LBRACE statements RBRACE
Rule 69    controlbody -> statement
Rule 70    controlbody -> SEMICOLON
Rule 71    ifstatement -> IF LPAREN condition RPAREN controlbody
Rule 72    ifstatement -> IF LPAREN condition RPAREN controlbody ELSE controlbody
Rule 73    whilestatement -> WHILE LPAREN condition RPAREN controlbody
Rule 74    expression -> expression PLUS expression
Rule 75    expression -> expression MINUS expression
Rule 76    expression -> expression TIMES expression
Rule 77    expression -> expression DIVIDE expression
Rule 78    expression -> pointer
Rule 79    expression -> address
Rule 80    expression -> const
Rule 81    expression -> var
Rule 82    expression -> funcall
Rule 83    expression -> LPAREN expression RPAREN
Rule 84    expression -> MINUS expression

Terminals, with rules where they appear

AMPERSAND            : 32
AND                  : 64
COMMA                : 20 37 52
COMMENT              : 41
DIVIDE               : 77
ELSE                 : 72
EQ                   : 62
EQUALS               : 56 57
FLOAT                : 13
FLOATNUM             : 28
GE                   : 61
GT                   : 59
ID                   : 26
IF                   : 71 72
INT                  : 11
LBRACE               : 10 68
LE                   : 60
LPAREN               : 7 9 34 67 71 72 73 83
LT                   : 58
MAIN                 : 14
MINUS                : 75 84
NE                   : 63
NOT                  : 66
NUMBER               : 27
OR                   : 65
PLUS                 : 74
RBRACE               : 9 68
RETURN               : 49 50
RPAREN               : 7 10 34 67 71 72 73 83
SEMICOLON            : 7 33 49 50 51 56 57 70
TIMES                : 29 30 31 76
VOID                 : 12
WHILE                : 73
error                : 

Nonterminals, with rules where they appear

address              : 25 30 79
arg                  : 18 20
argcomp              : 18 20
args                 : 7 10
assignment           : 46
callparam            : 35 37
condition            : 64 64 65 65 66 67 71 72 73
const                : 80
controlbody          : 71 72 72 73
dargs                : 9
decl_var             : 52 53
declaration          : 2 42
declarations         : 1 2 3
expression           : 39 49 56 57 58 58 59 59 60 60 61 61 62 62 63 63 74 74 75 75 76 76 77 77 83 84
fname                : 8
ftypename            : 7 9
funcall              : 33 82
funcdefs             : 1 5
funcproto            : 3
function             : 5 6
idlist               : 51 52
ifstatement          : 47
main                 : 17
param                : 22
paramcomp            : 35 37
params               : 34
pointer              : 16 24 29 55 56 78
program              : 0
retstatement         : 44
statement            : 40 69
statements           : 9 40 41 42 43 44 68
type                 : 8 22 51
var                  : 15 23 31 32 34 54 57 81
voidfuncall          : 43
whilestatement       : 48

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declarations funcdefs
    (2) declarations -> . declarations declaration
    (3) declarations -> . declarations funcproto
    (4) declarations -> .

    INT             reduce using rule 4 (declarations -> .)
    VOID            reduce using rule 4 (declarations -> .)
    FLOAT           reduce using rule 4 (declarations -> .)

    declarations                   shift and go to state 1
    program                        shift and go to state 2

state 1

    (1) program -> declarations . funcdefs
    (2) declarations -> declarations . declaration
    (3) declarations -> declarations . funcproto
    (5) funcdefs -> . function funcdefs
    (6) funcdefs -> . function
    (51) declaration -> . type idlist SEMICOLON
    (7) funcproto -> . ftypename LPAREN args RPAREN SEMICOLON
    (9) function -> . ftypename LPAREN dargs statements RBRACE
    (11) type -> . INT
    (12) type -> . VOID
    (13) type -> . FLOAT
    (8) ftypename -> . type fname

    INT             shift and go to state 3
    VOID            shift and go to state 6
    FLOAT           shift and go to state 10

    declaration                    shift and go to state 4
    type                           shift and go to state 5
    funcproto                      shift and go to state 7
    function                       shift and go to state 8
    funcdefs                       shift and go to state 9
    ftypename                      shift and go to state 11

state 2

    (0) S' -> program .



state 3

    (11) type -> INT .

    ID              reduce using rule 11 (type -> INT .)
    TIMES           reduce using rule 11 (type -> INT .)
    AMPERSAND       reduce using rule 11 (type -> INT .)
    MAIN            reduce using rule 11 (type -> INT .)


state 4

    (2) declarations -> declarations declaration .

    INT             reduce using rule 2 (declarations -> declarations declaration .)
    VOID            reduce using rule 2 (declarations -> declarations declaration .)
    FLOAT           reduce using rule 2 (declarations -> declarations declaration .)


state 5

    (51) declaration -> type . idlist SEMICOLON
    (8) ftypename -> type . fname
    (52) idlist -> . decl_var COMMA idlist
    (53) idlist -> . decl_var
    (15) fname -> . var
    (16) fname -> . pointer
    (17) fname -> . main
    (54) decl_var -> . var
    (55) decl_var -> . pointer
    (26) var -> . ID
    (29) pointer -> . TIMES pointer
    (30) pointer -> . TIMES address
    (31) pointer -> . TIMES var
    (14) main -> . MAIN

    ID              shift and go to state 13
    TIMES           shift and go to state 14
    MAIN            shift and go to state 15

    decl_var                       shift and go to state 16
    idlist                         shift and go to state 12
    var                            shift and go to state 17
    pointer                        shift and go to state 18
    main                           shift and go to state 19
    fname                          shift and go to state 20

state 6

    (12) type -> VOID .

    ID              reduce using rule 12 (type -> VOID .)
    TIMES           reduce using rule 12 (type -> VOID .)
    AMPERSAND       reduce using rule 12 (type -> VOID .)
    MAIN            reduce using rule 12 (type -> VOID .)


state 7

    (3) declarations -> declarations funcproto .

    INT             reduce using rule 3 (declarations -> declarations funcproto .)
    VOID            reduce using rule 3 (declarations -> declarations funcproto .)
    FLOAT           reduce using rule 3 (declarations -> declarations funcproto .)


state 8

    (5) funcdefs -> function . funcdefs
    (6) funcdefs -> function .
    (5) funcdefs -> . function funcdefs
    (6) funcdefs -> . function
    (9) function -> . ftypename LPAREN dargs statements RBRACE
    (8) ftypename -> . type fname
    (11) type -> . INT
    (12) type -> . VOID
    (13) type -> . FLOAT

    $end            reduce using rule 6 (funcdefs -> function .)
    INT             shift and go to state 3
    VOID            shift and go to state 6
    FLOAT           shift and go to state 10

    type                           shift and go to state 21
    funcdefs                       shift and go to state 22
    ftypename                      shift and go to state 23
    function                       shift and go to state 8

state 9

    (1) program -> declarations funcdefs .

    $end            reduce using rule 1 (program -> declarations funcdefs .)


state 10

    (13) type -> FLOAT .

    ID              reduce using rule 13 (type -> FLOAT .)
    TIMES           reduce using rule 13 (type -> FLOAT .)
    AMPERSAND       reduce using rule 13 (type -> FLOAT .)
    MAIN            reduce using rule 13 (type -> FLOAT .)


state 11

    (7) funcproto -> ftypename . LPAREN args RPAREN SEMICOLON
    (9) function -> ftypename . LPAREN dargs statements RBRACE

    LPAREN          shift and go to state 24


state 12

    (51) declaration -> type idlist . SEMICOLON

    SEMICOLON       shift and go to state 25


state 13

    (26) var -> ID .

    EQUALS          reduce using rule 26 (var -> ID .)
    LPAREN          reduce using rule 26 (var -> ID .)
    COMMA           reduce using rule 26 (var -> ID .)
    SEMICOLON       reduce using rule 26 (var -> ID .)
    RPAREN          reduce using rule 26 (var -> ID .)
    PLUS            reduce using rule 26 (var -> ID .)
    MINUS           reduce using rule 26 (var -> ID .)
    TIMES           reduce using rule 26 (var -> ID .)
    DIVIDE          reduce using rule 26 (var -> ID .)
    LT              reduce using rule 26 (var -> ID .)
    GT              reduce using rule 26 (var -> ID .)
    LE              reduce using rule 26 (var -> ID .)
    GE              reduce using rule 26 (var -> ID .)
    EQ              reduce using rule 26 (var -> ID .)
    NE              reduce using rule 26 (var -> ID .)
    AND             reduce using rule 26 (var -> ID .)
    OR              reduce using rule 26 (var -> ID .)


state 14

    (29) pointer -> TIMES . pointer
    (30) pointer -> TIMES . address
    (31) pointer -> TIMES . var
    (29) pointer -> . TIMES pointer
    (30) pointer -> . TIMES address
    (31) pointer -> . TIMES var
    (32) address -> . AMPERSAND var
    (26) var -> . ID

    TIMES           shift and go to state 14
    AMPERSAND       shift and go to state 29
    ID              shift and go to state 13

    var                            shift and go to state 26
    address                        shift and go to state 27
    pointer                        shift and go to state 28

state 15

    (14) main -> MAIN .

    LPAREN          reduce using rule 14 (main -> MAIN .)


state 16

    (52) idlist -> decl_var . COMMA idlist
    (53) idlist -> decl_var .

    COMMA           shift and go to state 30
    SEMICOLON       reduce using rule 53 (idlist -> decl_var .)


state 17

    (15) fname -> var .
    (54) decl_var -> var .

    LPAREN          reduce using rule 15 (fname -> var .)
    COMMA           reduce using rule 54 (decl_var -> var .)
    SEMICOLON       reduce using rule 54 (decl_var -> var .)


state 18

    (16) fname -> pointer .
    (55) decl_var -> pointer .

    LPAREN          reduce using rule 16 (fname -> pointer .)
    COMMA           reduce using rule 55 (decl_var -> pointer .)
    SEMICOLON       reduce using rule 55 (decl_var -> pointer .)


state 19

    (17) fname -> main .

    LPAREN          reduce using rule 17 (fname -> main .)


state 20

    (8) ftypename -> type fname .

    LPAREN          reduce using rule 8 (ftypename -> type fname .)


state 21

    (8) ftypename -> type . fname
    (15) fname -> . var
    (16) fname -> . pointer
    (17) fname -> . main
    (26) var -> . ID
    (29) pointer -> . TIMES pointer
    (30) pointer -> . TIMES address
    (31) pointer -> . TIMES var
    (14) main -> . MAIN

    ID              shift and go to state 13
    TIMES           shift and go to state 14
    MAIN            shift and go to state 15

    var                            shift and go to state 31
    pointer                        shift and go to state 32
    main                           shift and go to state 19
    fname                          shift and go to state 20

state 22

    (5) funcdefs -> function funcdefs .

    $end            reduce using rule 5 (funcdefs -> function funcdefs .)


state 23

    (9) function -> ftypename . LPAREN dargs statements RBRACE

    LPAREN          shift and go to state 33


state 24

    (7) funcproto -> ftypename LPAREN . args RPAREN SEMICOLON
    (9) function -> ftypename LPAREN . dargs statements RBRACE
    (18) args -> . arg argcomp
    (19) args -> .
    (10) dargs -> . args RPAREN LBRACE
    (22) arg -> . type param
    (11) type -> . INT
    (12) type -> . VOID
    (13) type -> . FLOAT

    RPAREN          reduce using rule 19 (args -> .)
    INT             shift and go to state 3
    VOID            shift and go to state 6
    FLOAT           shift and go to state 10

    args                           shift and go to state 34
    type                           shift and go to state 35
    dargs                          shift and go to state 36
    arg                            shift and go to state 37

state 25

    (51) declaration -> type idlist SEMICOLON .

    COMMENT         reduce using rule 51 (declaration -> type idlist SEMICOLON .)
    RETURN          reduce using rule 51 (declaration -> type idlist SEMICOLON .)
    IF              reduce using rule 51 (declaration -> type idlist SEMICOLON .)
    WHILE           reduce using rule 51 (declaration -> type idlist SEMICOLON .)
    INT             reduce using rule 51 (declaration -> type idlist SEMICOLON .)
    VOID            reduce using rule 51 (declaration -> type idlist SEMICOLON .)
    FLOAT           reduce using rule 51 (declaration -> type idlist SEMICOLON .)
    TIMES           reduce using rule 51 (declaration -> type idlist SEMICOLON .)
    ID              reduce using rule 51 (declaration -> type idlist SEMICOLON .)
    RBRACE          reduce using rule 51 (declaration -> type idlist SEMICOLON .)


state 26

    (31) pointer -> TIMES var .

    PLUS            reduce using rule 31 (pointer -> TIMES var .)
    MINUS           reduce using rule 31 (pointer -> TIMES var .)
    TIMES           reduce using rule 31 (pointer -> TIMES var .)
    DIVIDE          reduce using rule 31 (pointer -> TIMES var .)
    SEMICOLON       reduce using rule 31 (pointer -> TIMES var .)
    LT              reduce using rule 31 (pointer -> TIMES var .)
    GT              reduce using rule 31 (pointer -> TIMES var .)
    LE              reduce using rule 31 (pointer -> TIMES var .)
    GE              reduce using rule 31 (pointer -> TIMES var .)
    EQ              reduce using rule 31 (pointer -> TIMES var .)
    NE              reduce using rule 31 (pointer -> TIMES var .)
    COMMA           reduce using rule 31 (pointer -> TIMES var .)
    RPAREN          reduce using rule 31 (pointer -> TIMES var .)
    AND             reduce using rule 31 (pointer -> TIMES var .)
    OR              reduce using rule 31 (pointer -> TIMES var .)
    LPAREN          reduce using rule 31 (pointer -> TIMES var .)
    EQUALS          reduce using rule 31 (pointer -> TIMES var .)


state 27

    (30) pointer -> TIMES address .
